--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
