--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
-    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
